Uploaded image for project: 'Qt Creator'
  1. Qt Creator
  2. QTCREATORBUG-27806

QtCreator 8 fails to build with qt5

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: Not Evaluated Not Evaluated
    • Qt Creator 8.0.0
    • Qt Creator 8.0.0-beta1, Qt Creator 8.0.0-beta2
    • Building Qt Creator
    • None
    • Linux/X11
    • b33a1c62ed (qt-creator/qt-creator/8.0) b33a1c62ed (qt-creator/qt-creator/master) b33a1c62ed (qt-creator/qt-creator/qds-3.6) b33a1c62ed (qt-creator/qt-creator/9.0)

      // code placeholder
      
      FAILED: src/tools/CMakeFiles/cplusplus-mkvisitor.dir/cplusplus-mkvisitor/cplusplus-mkvisitor.cpp.o 
      /usr/bin/x86_64-pc-linux-gnu-g++ -DPATH_AST_H=\"/tmp/portage/dev-qt/qt-creator-8.0.0_beta1/work/qt-creator-opensource-src-8.0.0-beta1/src/tools/../libs/3rdparty/cplusplus/AST.h\" -DPATH_PREPROCESSOR_CONFIG=\"/tmp/portage/dev-qt/qt-creator-8.0.0_beta1/work/qt-creator-opensource-src-8.0.0-beta1/src/tools/cplusplus-shared/pp-configuration.inc\" -DQT_CONCURRENT_LIB -DQT_CORE_LIB -DQT_CREATOR -DQT_DISABLE_DEPRECATED_BEFORE=0x050900 -DQT_GUI_LIB -DQT_NETWORK_LIB -DQT_NO_CAST_TO_ASCII -DQT_NO_DEBUG -DQT_NO_JAVA_STYLE_ITERATORS -DQT_RESTRICTED_CAST_FROM_ASCII -DQT_USE_QSTRINGBUILDER -DQT_WIDGETS_LIB -DRELATIVE_DATA_PATH=\"../share/qtcreator\" -DRELATIVE_DOC_PATH=\"../share/doc/qtcreator\" -DRELATIVE_LIBEXEC_PATH=\"../libexec/qtcreator\" -DRELATIVE_PLUGIN_PATH=\"../lib64/qtcreator/plugins\" -I/tmp/portage/dev-qt/qt-creator-8.0.0_beta1/work/qt-creator-opensource-src-8.0.0-beta1_build/src/tools -I/tmp/portage/dev-qt/qt-creator-8.0.0_beta1/work/qt-creator-opensource-src-8.0.0-beta1/src/tools -I/tmp/portage/dev-qt/qt-creator-8.0.0_beta1/work/qt-creator-opensource-src-8.0.0-beta1_build/src/tools/cplusplus-mkvisitor_autogen/include -I/tmp/portage/dev-qt/qt-creator-8.0.0_beta1/work/qt-creator-opensource-src-8.0.0-beta1_build/src -I/tmp/portage/dev-qt/qt-creator-8.0.0_beta1/work/qt-creator-opensource-src-8.0.0-beta1/src/tools/cplusplus-shared -I/tmp/portage/dev-qt/qt-creator-8.0.0_beta1/work/qt-creator-opensource-src-8.0.0-beta1/src/tools/cplusplus-mkvisitor -I/tmp/portage/dev-qt/qt-creator-8.0.0_beta1/work/qt-creator-opensource-src-8.0.0-beta1/src/libs -I/tmp/portage/dev-qt/qt-creator-8.0.0_beta1/work/qt-creator-opensource-src-8.0.0-beta1/src/libs/utils/mimetypes2 -I/tmp/portage/dev-qt/qt-creator-8.0.0_beta1/work/qt-creator-opensource-src-8.0.0-beta1/src/libs/3rdparty -isystem /usr/include/qt5 -isystem /usr/include/qt5/QtCore -isystem /usr/lib64/qt5/mkspecs/linux-g++ -isystem /usr/include/qt5/QtConcurrent -isystem /usr/include/qt5/QtNetwork -isystem /usr/include/qt5/QtGui -isystem /usr/include/qt5/QtWidgets  -O2 -pipe -fvisibility=hidden -fvisibility-inlines-hidden -Wno-missing-field-initializers -fPIC -std=c++17 -MD -MT src/tools/CMakeFiles/cplusplus-mkvisitor.dir/cplusplus-mkvisitor/cplusplus-mkvisitor.cpp.o -MF src/tools/CMakeFiles/cplusplus-mkvisitor.dir/cplusplus-mkvisitor/cplusplus-mkvisitor.cpp.o.d -o src/tools/CMakeFiles/cplusplus-mkvisitor.dir/cplusplus-mkvisitor/cplusplus-mkvisitor.cpp.o -c /tmp/portage/dev-qt/qt-creator-8.0.0_beta1/work/qt-creator-opensource-src-8.0.0-beta1/src/tools/cplusplus-mkvisitor/cplusplus-mkvisitor.cpp
      /tmp/portage/dev-qt/qt-creator-8.0.0_beta1/work/qt-creator-opensource-src-8.0.0-beta1/src/tools/cplusplus-mkvisitor/cplusplus-mkvisitor.cpp: In member function 'virtual bool MkVisitor::visit(CPlusPlus::Class*)':
      /tmp/portage/dev-qt/qt-creator-8.0.0_beta1/work/qt-creator-opensource-src-8.0.0-beta1/src/tools/cplusplus-mkvisitor/cplusplus-mkvisitor.cpp:407:49: error: binding reference of type 'CPlusPlus::ClassOrNamespace* const&' to 'const CPlusPlus::ClassOrNamespace*' discards qualifiers
        407 |                         if (interfaces.contains(u)) {
            |                                                 ^
      In file included from /usr/include/qt5/QtCore/qstringlist.h:41,
                       from /usr/include/qt5/QtCore/QStringList:1,
                       from /tmp/portage/dev-qt/qt-creator-8.0.0_beta1/work/qt-creator-opensource-src-8.0.0-beta1/src/libs/cplusplus/PreprocessorClient.h:30,
                       from /tmp/portage/dev-qt/qt-creator-8.0.0_beta1/work/qt-creator-opensource-src-8.0.0-beta1/src/libs/cplusplus/CppDocument.h:31,
                       from /tmp/portage/dev-qt/qt-creator-8.0.0_beta1/work/qt-creator-opensource-src-8.0.0-beta1/src/tools/cplusplus-mkvisitor/cplusplus-mkvisitor.cpp:39:
      /usr/include/qt5/QtCore/qlist.h:1079:55: note:   initializing argument 1 of 'bool QList<T>::contains(const T&) const [with T = CPlusPlus::ClassOrNamespace*]'
       1079 | Q_OUTOFLINE_TEMPLATE bool QList<T>::contains(const T &t) const
      

        1. 1
          873 kB
        For Gerrit Dashboard: QTCREATORBUG-27806
        # Subject Branch Project Status CR V

            con Eike Ziller
            anomalocaris Alex Drozdov
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes