CPlusPlus tools: Fix build with Qt 5

error: reference to type 'CPlusPlus::ClassOrNamespace *const'
could not bind to an lvalue of type
'const CPlusPlus::ClassOrNamespace *'
    if (interfaces.contains(u)) {

Amends f7097cef1946d64f4cba50cb6973e4bfba2ea136

Fixes: QTCREATORBUG-27806
Change-Id: Ia5c27260f71bf35c87352545fff42dcaef1f2649
Reviewed-by: hjk <hjk@qt.io>